--- a/META.yml
+++ b/META.yml
@@ -23,10 +23,12 @@ no_index:
     - xt
 requires:
   Class::Utils: 0
+  Error::Pure: 0
   Getopt::Std: 0
+  Readonly: 0
   Unicode::UTF8: 0
   Wikibase::API: 0.04
-  Wikibase::Datatype::Print::Item: 0
+  Wikibase::Datatype::Query: 0
   perl: 5.6.0
 resources:
   bugtracker: https://github.com/michal-josef-spacek/App-Wikidata-Template-CS-CitaceMonografie/issues
