--- a/META.yml
+++ b/META.yml
@@ -26,6 +26,7 @@ requires:
   Class::Utils: 0
   Error::Pure: 0
   Getopt::Std: 0
+  List::Util: 1.33
   Readonly: 0
   Unicode::UTF8: 0
   Wikibase::API: 0.04
