--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,8 @@ abstract: 'Command line tool for create Czech Wikipedia template for monography 
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  English: 0
+  Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.36
   Test::More: 0
   Test::NoWarnings: 0
